--- a/wp-content/themes/mnsk7-storefront/assets/css/parts/06-single-product.css
+++ b/wp-content/themes/mnsk7-storefront/assets/css/parts/06-single-product.css
@@ -1021,6 +1021,10 @@ body.single-product .mnsk7-content .woocommerce-sidebar {
 }
 
 @media (min-width: 901px) {
+  .single-product div.product {
+    overflow: visible !important;
+  }
+
   .single-product div.product .woocommerce-product-gallery.images,
   .single-product div.product .images {
     position: sticky !important;
